overflow bug set

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
   }
 
   .languages ul {
-    width: 93%;
+    width: 90%;
     padding-right: 1rem;
   }
 
